# bookland

./: .sqlfluff  README.md  bookland.db  bookland_sql.sql  docker-compose.yml  main.py  pyproject.toml
crud/: crud.py
db/: database.py
exceptions/: exceptions.py
hooks/: hooks.py
models/: models.py
schemas/: schemas.py
tests/: conftest.py
tests/integration/: test_book_integration.py  test_main_integration.py
tests/unit/: test_book_crud.py  test_main.py
