[tool.poetry]
name = "bookland"
version = "0.1.0"
description = ""
authors = ["Your Name you@example.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
sqlalchemy = "^2.0.43"
pydantic = "^2.11.9"
pydantic-settings = "^2.11.0"
fastapi = "^0.117.1"
uvicorn = "^0.37.0"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
